# sber-agents

./: .gitignore  README.md
02-llm-api/: .gitignore  report.md
02-llm-api/src/: bot.py
03-aidd/: Makefile  README.md  report.md
03-aidd/docs/: conventions.md  idea.md  tasklist.md  vision.md  workflow.md
03-aidd/prompts/: system_prompt.txt
03-aidd/src/: _llm_tmp.py  bot.py  config.py  handlers.py  llm.py
04-multimodal/: README.md  pyproject.toml  report.md
04-multimodal/docs/: idea.md  tasklist.md
04-multimodal/src/: handlers.py
05-rag-langchain/live/: pyproject.toml  report.md
05-rag-langchain/live/docs/: vision.md
05-rag-langchain/live/src/: indexer.py  indexer_with_json.py
06-monitoring-qa/: report.md
07-advanced-rag/: report.md
08-agents-langgraph/: report.md
08-agents-langgraph/src/: tools.py
docs/: idea.md
